# mobile_scanner

./: BARCODE_AND_QR_SUPPORT.md  CHANGELOG.md  README.md  analysis_options.yaml  plan.md  pubspec.yaml
.github/workflows/: code-coverage.yml  code-quality.yml
android/: build.gradle  build.gradle.kts  settings.gradle.kts
android/src/main/cpp/: CMakeLists.txt  ms_zxing_jni.cpp
android/src/main/kotlin/dev/steenbakker/mobile_scanner/: MobileScanner.kt  MobileScannerHandler.kt
android/src/main/kotlin/dev/steenbakker/mobile_scanner/engine/: ZxingBarcode.kt  ZxingBarcodeData.kt  ZxingEngine.kt
android/src/main/kotlin/dev/steenbakker/mobile_scanner/objects/: BarcodeFormats.kt
android/src/main/kotlin/dev/steenbakker/mobile_scanner/utils/: AdvancedBarcodeProcessor.kt  BitmapExtension.kt
android/src/test/kotlin/dev/steenbakker/mobile_scanner/: MobileScannerTest.kt
android/src/test/kotlin/dev/steenbakker/mobile_scanner/engine/: ZxingBarcodeDataTest.kt
darwin/: mobile_scanner.podspec
darwin/mobile_scanner/Sources/mobile_scanner/: BarcodeTypeDetector.swift  MobileScannerPlugin.swift  ZxingScannerDarwin.swift
example/: pubspec.yaml
example/android/: build.gradle.kts  settings.gradle.kts
example/android/app/: build.gradle.kts
example/android/gradle/wrapper/: gradle-wrapper.properties
example/lib/: barcode_scanner_controller.dart  main.dart
example/lib/screens/: mobile_scanner_advanced.dart
example/lib/widgets/: scanned_barcode_dialog.dart
example/test/widgets/: scanned_barcode_dialog_test.dart
ios/Classes/: MobileScanner.swift  MobileScannerPlugin.swift
lib/src/: mobile_scanner_controller.dart  mobile_scanner_platform_interface.dart
lib/src/enums/: barcode_format.dart
lib/src/ffi/: ms_zxing_bindings.dart  zxing_decoder.dart  zxing_image_analyzer.dart  zxing_image_analyzer_io.dart  zxing_image_analyzer_stub.dart
lib/src/method_channel/: mobile_scanner_method_channel.dart
lib/src/objects/: barcode.dart  start_options.dart
lib/src/web/: mobile_scanner_web.dart
lib/src/web/zxing/: result.dart  zxing_barcode_reader.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  ms_fallback_barcodes.cpp  ms_fallback_barcodes.h  ms_unsupported_barcodes.cpp  ms_unsupported_barcodes.h  ms_zxing.cpp  ms_zxing.h
test/enums/: barcode_format_test.dart
test/mobile_scanner_controller/: get_supported_lenses_test.dart  switch_camera_test.dart
test/mobile_scanner_widget/: detect_barcode_test.dart
test/objects/: barcode_test.dart  start_options_test.dart
windows/: CMakeLists.txt
